feat: Added vulnerability for test + update .yaml so deploy after code scanning finished

--- a/.github/workflows/deploy_limas-api-dev.yml
+++ b/.github/workflows/deploy_limas-api-dev.yml
@@ -4,9 +4,10 @@
 name: Deploy API to Azure Web App (Dev) - limas-api-dev
 
 on:
-  push:
-    branches:
-      - dev
+  workflow_run:
+    workflows: ["SonarCloud"]
+    types:
+        - completed
   workflow_dispatch:
 
 jobs:
